--- a/hw-1/homework_1.ipynb
+++ b/hw-1/homework_1.ipynb
@@ -66,12 +66,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def share_bread(N, K):\n",
-    "    # your code here\n",
+    "    # number_hobbit=int(input(\"Enter the number of hobbits:\"))\n",
+    "    # number_piece=int(input(\"Enter the number of pieces of bread:\"))\n",
+    "    number_hobbit = N\n",
+    "    number_piece = K\n",
+    "    y = number_piece % number_hobbit\n",
+    "    x = (number_piece - y) // number_hobbit\n",
+    "    \n",
     "    return x, y\n",
     "\n",
     "# если в функции всё верно, то после выполнения этой строчки, не должно выскакивать ошибок\n",
