--- a/hw-1/homework_1.ipynb
+++ b/hw-1/homework_1.ipynb
@@ -95,22 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "'(' was never closed (1641679045.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[14], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    text_result=(lambda x: 'YOU SHALL PASS' if (x%4==0 and x%100!=0 and x%400!=0) else 'YOU SHALL NOT PASS'\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m '(' was never closed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def leap_year(year):\n",
     "    # your code here\n",
-    "    text_result=(lambda x: 'YOU SHALL PASS' if (x%4==0 and x%100!=0 and x%400!=0) else 'YOU SHALL NOT PASS'\n",
+    "    text_result = (\n",
+    "        lambda x: 'YOU SHALL PASS' if (x % 4 == 0 and x % 100 != 0 and x % 400 != 0) else 'YOU SHALL NOT PASS')(year)\n",
     "    return text_result\n",
     "\n",
     "assert leap_year(5) == 'YOU SHALL NOT PASS'"
