--- a/hw-1/homework_1.ipynb
+++ b/hw-1/homework_1.ipynb
@@ -123,12 +123,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "def amulet_area(a, b, c):\n",
     "    # your code here\n",
+    "    p = (a + b + c) / 2\n",
+    "    S = np.sqrt(p * (p - a) * (p - b) * (p - c))\n",
     "    return S\n",
     "\n",
     "assert amulet_area(3, 4, 5) == 6"
@@ -153,28 +157,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "def cal_euclidean(a, b):    \n",
     "    ## Your code here\n",
+    "    distance = np.sqrt(np.sum(np.square(a - b)))\n",
     "    return distance\n",
     "\n",
     "def cal_manhattan(a, b):    \n",
     "    ## Your code here\n",
+    "    distance = np.sum(np.absolute(a - b))\n",
     "    return distance\n",
     "\n",
     "def cal_cosine(a, b):    \n",
     "    ## Your code here\n",
+    "    distance = 1 - (np.dot(a, b) / (np.linalg.norm(a) * np.linalg.norm(a)))\n",
     "    return distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29.017236257093817\n",
+      "76\n",
+      "1.356164383561644\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.random.randint(-10, 10, size=10)\n",
     "b = np.random.randint(-10, 10, size=10)\n",
@@ -204,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +230,7 @@
      "evalue": "invalid syntax (1727472048.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    my_array = ## Your code here\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[35], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    my_array = ## Your code here\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
