--- a/hw-1/homework_1.ipynb
+++ b/hw-1/homework_1.ipynb
@@ -180,16 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "29.017236257093817\n",
-      "76\n",
-      "1.356164383561644\n"
+      "23.874672772626646\n",
+      "66\n",
+      "1.0183150183150182\n"
      ]
     }
    ],
@@ -222,20 +222,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1727472048.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[35], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    my_array = ## Your code here\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 0\n",
+      "[0 0 0 0 1 1 0 0 1 0 1 0 1 1 1 0 1 1 1 1 1 0 0 0 1 1 1 1 0 0 1 1 0 1 0 1 1\n",
+      " 0 0 1 1 1 0 1 0 1 0 1 1 0 0 0 1 0 1 0 1 0 0 0 1 1 1 0 0 0 1 0 1 0 0 1 0 1\n",
+      " 0 0 1 1 1 0 1 1 0 1 0 0 1 1 0 1 0 0 1 1 1 0 1 1 1 1]\n"
      ]
     }
    ],
    "source": [
-    "my_array = ## Your code here\n",
+    "import numpy as np\n",
+    "\n",
+    "my_array = np.random.randint(0, 2, size=100)\n",
     "print(np.max(my_array), np.min(my_array))\n",
     "print(my_array)"
    ]
@@ -249,21 +253,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1465630717.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[2], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    my_array = ## Your code here\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape:  (5, 6)\n",
+      "Array\n",
+      "[[21 10  2 25 17 30]\n",
+      " [11 37 31 39  8 20]\n",
+      " [ 1 16 31 21  8 15]\n",
+      " [47 15 43 44 22 13]\n",
+      " [40 45 25 35 47 38]]\n",
+      "[[21]\n",
+      " [11]\n",
+      " [ 1]\n",
+      " [47]\n",
+      " [40]]\n"
      ]
     }
    ],
    "source": [
-    "my_array = ## Your code here\n",
-    "selected_column = ## Your code here\n",
+    "import numpy as np\n",
+    "\n",
+    "my_array = np.matrix(np.random.randint(0, 50, size=30).reshape((5,6)))\n",
+    "selected_column =my_array[:, np.argmax(my_array.max(axis=0))]\n",
     "print('Shape: ',my_array.shape)\n",
     "print('Array')\n",
     "print(my_array)\n",
@@ -312,12 +328,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'get_unique_rows' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[40], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m get_unique_rows(X)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'get_unique_rows' is not defined"
+     ]
+    }
+   ],
    "source": [
     "get_unique_rows(X)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
