added classes Vehicle, Engine, Car, Plane

--- a/hw_2/homework_2.ipynb
+++ b/hw_2/homework_2.ipynb
@@ -32,11 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import exceptions"
+    "import exceptions\n",
+    "\n"
    ]
   },
   {
@@ -59,15 +60,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from abc import ABC\n",
     "\n",
-    "\n",
     "class Vehicle(ABC):\n",
-    "    pass"
+    "    weight = 10\n",
+    "    started = False\n",
+    "    fuel = 5\n",
+    "    fuel_consumption = 7\n",
+    "\n",
+    "    def __init__(self, weight, fuel, fuel_consumption):\n",
+    "        self.weight = weight\n",
+    "        self.fuel = fuel\n",
+    "        self.fuel_consumption = fuel_consumption\n",
+    "\n",
+    "    def start(self):\n",
+    "        if self.started == False and self.fuel > 0:\n",
+    "            self.started = True\n",
+    "        else:\n",
+    "            raise exceptions.LowFuelError('zero fuel')\n",
+    "\n",
+    "    def move(self):\n",
+    "        if self.fuel < self.fuel_consumption:\n",
+    "            self.fuel_consumption = self.fuel_consumption - self.fuel\n",
+    "        else:\n",
+    "            raise exceptions.NotEnoughFuel('not enough fuel')"
    ]
   },
   {
@@ -83,13 +103,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
     "create dataclass `Engine`\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "from dataclasses import dataclass\n",
+    "\n",
+    "@dataclass\n",
+    "class Engine:\n",
+    "    volume: int\n",
+    "    pistons: int"
    ]
   },
   {
@@ -108,13 +134,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
     "создайте класс `Car`, наследник `Vehicle`\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "class Car(Vehicle):\n",
+    "    engine: Engine\n",
+    "\n",
+    "    def __init__(self, weight, fuel, fuel_consumption):\n",
+    "        super().__init__(weight, fuel, fuel_consumption)\n",
+    "\n",
+    "    def set_engine(self, engine: Engine):\n",
+    "        self.engine = engine"
    ]
   },
   {
@@ -135,13 +169,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
     "создайте класс `Plane`, наследник `Vehicle`\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "class Plane(Vehicle):\n",
+    "    cargo: float\n",
+    "    max_cargo: float\n",
+    "\n",
+    "    def __init__(self, weight, fuel, fuel_consumption, max_cargo):\n",
+    "        super().__init__(weight, fuel, fuel_consumption)\n",
+    "        self.max_cargo = max_cargo\n",
+    "\n",
+    "    def load_cargo(self, add_cargo):\n",
+    "        if (add_cargo + self.cargo) < self.max_cargo:\n",
+    "            self.cargo = self.cargo + add_cargo\n",
+    "        else:\n",
+    "            raise exceptions.CargoOverload('overload')\n",
+    "\n",
+    "    def remove_all_cargo(self):\n",
+    "        temp_cargo = self.cargo\n",
+    "        self.cargo = 0\n",
+    "        return temp_cargo"
    ]
   }
  ],
